[package]
name = "pb-imgsize"
version = "0.2.3"
edition = "2021"
license = "MIT"
authors = ["Pete Bevin <pete@petebevin.com>"]
description = "A Rust library to detect the dimensions of PNG and JPEG images."
repository = "https://github.com/pbevin/imgsize"
readme = "README.md"
keywords = ["image", "png", "jpeg", "dimensions", "size", "detect"]


[dependencies]
crc32fast = "1.3.2"
log = "0.4.19"
memchr = "2.5.0"
thiserror = "1.0.40"

[dev-dependencies]
assert_matches = "1.5.0"
